@@ -1,3 +1,8 @@
+2009-06-15  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* doc/gdb.texinfo (Calling): Document
+	set-unwind-on-terminating-exception usage.
+
 2009-06-11  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.texinfo (All-Stop): Document new 'set schedule-multiple'
